change first block

--- a/index.html
+++ b/index.html
@@ -40,37 +40,26 @@
             <div class="row centered">
                 <div class="col-lg-8 col-lg-offset-2 text-block1_1">
                     <img src="img/logo_yeer_sm.png" alt="Logo" class="" height="450"><br/>
-                    <!-- <h2>2017</h2>   
-                    <br/><h1>ВІДЧУЙ СЕБЕ ЖИВИМ</h1><br/><br/> -->
-                </div>
-            </div>
-            <div class="row centered button-block">
-                <div class="col-lg-3"></div>               
-                <div class="col-lg-3">
-                    <img src="img/logo.png" alt="Logo" class="" height="300">
-                    <h2>2017</h2>
-                    <br/><h1>ВІДЧУЙ СЕБЕ ЖИВИМ</h1><br/><br/>
+                    <br/>
                 </div>
             </div>
             <div class="row centered">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-4">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-3">
                     <button type="button" class="btn btn-default btn-lg button-one" aria-label="Left Align">
-                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>ПРОМО</button>
+                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>
+                        ПРОМО
+                    </button>
                 </div>
                 <div class="col-lg-3"><button type="button" class="btn btn-default btn-lg button-two">ЗАРЕЄСТРУВАТИСЯ</button></div>
-                <div class="col-lg-3">
-<!--                     <button type="button" class="btn btn-default btn-lg button-two">
-                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span> ПРОМО
-                    </button> -->
-                </div>
+                <div class="col-lg-3"></div>
             </div>
         </div>
     </div>
     <div id="pro_tabir">
         <div class="container">
             <div class="row centered">
-                <div class="col-lg-3 col-lg-offset-1 text-block2_1" >
+                <div class="col-lg-3 text-block2_1" >
                     <div class="text-innerblock2_1">
                         <h1>ДЛЯ КОГО?</h1>
                         <h4>Для молоді, яка<br/>відчуває себе<br/>живою, активною<br/>та драйвовою!</h4>
@@ -80,9 +69,6 @@
                     <img src="img/logo_yeer.png" alt="Logo" class="" height="130">
                     <h3>Місце проведення<br/><strong>ШАЦЬКІ ОЗЕРА</strong></h3>
                     <h3></h3>   
-                <div class="col-lg-6 text-block2_2">
-                    <img src="img/logo.png" alt="Logo" class="" height="200">
-                    <h3>2017</h3>
                 </div>
                 <div class="col-lg-3 text-block2_3">
                     <div class="">
@@ -326,129 +312,118 @@
     <div id="photo">
         <div class="container">
             <div id="main_area">
-                    <!-- Slider -->
-                    <div class="row">
-                        <div class="col-xs-12" id="slider">
-                            <!-- Top part of the slider -->
-                            <div class="row">
-                                <div class="col-sm-6 col-sm-offset-3 " id="carousel-bounding-box">
-                                <div class="col-sm-2">
-                                    <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <!-- Slider -->
+                <div class="row">
+                    <div class="col-xs-12" id="slider">
+                        <!-- Top part of the slider -->
+                        <div class="row">
+                            <div class="col-sm-6 col-sm-offset-3" id="carousel-bounding-box">
+                                <div class="carousel slide" id="myCarousel">
+                                    <!-- Carousel items -->
+                                    <div class="carousel-inner">
+                                        <div class="active item" data-slide-number="0">
+                                        <img src="img/Fon_1.jpg"></div>
+
+                                        <div class="item" data-slide-number="1">
+                                        <img src="img/Fon_2.jpg"></div>
+
+                                        <div class="item" data-slide-number="2">
+                                        <img src="img/Fon_3.jpg"></div>
+
+                                        <div class="item" data-slide-number="3">
+                                        <img src="img/Fon_4.jpg"></div>
+
+                                        <div class="item" data-slide-number="4">
+                                        <img src="img/Fon_5.jpg"></div>
+
+                                        <div class="item" data-slide-number="5">
+                                        <img src="img/Fon_6.jpg"></div>
+                                    </div><!-- Carousel nav -->
+                                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                                         <span class="glyphicon glyphicon-chevron-left"></span>
-                                    </a> -->
+                                    </a>
+                                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                        <span><img src="img/strilka_white.png" alt=""></span>
+                                        <!-- <span><i class="fa fa-angle-right" aria-hidden="true"></i></span> -->
+                                        <!-- <span class="glyphicon glyphicon-chevron-right"></span>  -->                      
+                                    </a>
                                 </div>
-                                <div class="col-sm-8 " id="carousel-bounding-box">
-                                <div class="col-sm-6 col-sm-offset-3 " id="carousel-bounding-box">
-                                    <div class="carousel slide" id="myCarousel">
-                                        <!-- Carousel items -->
-                                        <div class="carousel-inner">
-                                            <div class="active item" data-slide-number="0">
-                                            <img src="img/Fon_1.jpg"></div>
-
-                                            <div class="item" data-slide-number="1">
-                                            <img src="img/Fon_2.jpg"></div>
-
-                                            <div class="item" data-slide-number="2">
-                                            <img src="img/Fon_3.jpg"></div>
-
-                                            <div class="item" data-slide-number="3">
-                                            <img src="img/Fon_4.jpg"></div>
-
-                                            <div class="item" data-slide-number="4">
-                                            <img src="img/Fon_5.jpg"></div>
-
-                                            <div class="item" data-slide-number="5">
-                                            <img src="img/Fon_6.jpg"></div>
-                                        </div><!-- Carousel nav -->
-                                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                                            <span class="glyphicon glyphicon-chevron-left"></span>
-                                        </a>
-                                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                                            <span><img src="img/strilka_white.png" alt=""></span>
-                                            <!-- <span><i class="fa fa-angle-right" aria-hidden="true"></i></span> -->
-                                            <!-- <span class="glyphicon glyphicon-chevron-right"></span>  -->                                
-                                        </a>                                
-                                            <span class="glyphicon glyphicon-chevron-right"></span>
-                                        </a>
-                                        </div>
-                                </div>
-
-                               <!--  <div class="col-sm-4" id="carousel-text"></div>
-
-                                <div id="slide-content" style="display: none;">
-                                    <div id="slide-content-0">
-                                        <h2>Slider One</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-1">
-                                        <h2>Slider Two</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-2">
-                                        <h2>Slider Three</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-3">
-                                        <h2>Slider Four</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-4">
-                                        <h2>Slider Five</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-
-                                    <div id="slide-content-5">
-                                        <h2>Slider Six</h2>
-                                        <p>Lorem Ipsum Dolor</p>
-                                        <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                    </div>
-                                </div> -->
                             </div>
+
+                           <!--  <div class="col-sm-4" id="carousel-text"></div>
+
+                            <div id="slide-content" style="display: none;">
+                                <div id="slide-content-0">
+                                    <h2>Slider One</h2>
+                                    <p>Lorem Ipsum Dolor</p>
+                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
+                                </div>
+
+                                <div id="slide-content-1">
+                                    <h2>Slider Two</h2>
+                                    <p>Lorem Ipsum Dolor</p>
+                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
+                                </div>
+
+                                <div id="slide-content-2">
+                                    <h2>Slider Three</h2>
+                                    <p>Lorem Ipsum Dolor</p>
+                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
+                                </div>
+
+                                <div id="slide-content-3">
+                                    <h2>Slider Four</h2>
+                                    <p>Lorem Ipsum Dolor</p>
+                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
+                                </div>
+
+                                <div id="slide-content-4">
+                                    <h2>Slider Five</h2>
+                                    <p>Lorem Ipsum Dolor</p>
+                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
+                                </div>
+
+                                <div id="slide-content-5">
+                                    <h2>Slider Six</h2>
+                                    <p>Lorem Ipsum Dolor</p>
+                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
+                                </div>
+                            </div> -->
                         </div>
-                    </div><!--/Slider-->
-
-                    <div class="row hidden-xs" id="slider-thumbs">
-                            <!-- Bottom switcher of slider -->
-                            <ul class="hide-bullets">
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-0"><img src="img/Fon_1.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-1"><img src="img/Fon_2.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-2"><img src="img/Fon_3.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-3"><img src="img/Fon_4.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-4"><img src="img/Fon_5.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-5"><img src="img/Fon_6.jpg"></a>
-                                </li>
-                            </ul>
                     </div>
+                </div><!--/Slider-->
+
+                <div class="row hidden-xs" id="slider-thumbs">
+                    <!-- Bottom switcher of slider -->
+                    <ul class="hide-bullets">
+                        <li class="col-sm-2">
+                            <a class="thumbnail" id="carousel-selector-0"><img src="img/Fon_1.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-2">
+                            <a class="thumbnail" id="carousel-selector-1"><img src="img/Fon_2.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-2">
+                            <a class="thumbnail" id="carousel-selector-2"><img src="img/Fon_3.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-2">
+                            <a class="thumbnail" id="carousel-selector-3"><img src="img/Fon_4.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-2">
+                            <a class="thumbnail" id="carousel-selector-4"><img src="img/Fon_5.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-2">
+                            <a class="thumbnail" id="carousel-selector-5"><img src="img/Fon_6.jpg"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </div>
     </div>
-    </div>
-
-
     <div id="kontakty">
         <div class="container">
             <div class="row centered">
@@ -470,20 +445,10 @@
             <div class="row centered text-row9_2">
                 <div class="col-lg-12">
                     <h3>info@alivecamp.com.ua</h3>
-            <div class="row centered">
-                <div class="col-lg-8"></div>
-                <div class="col-lg-4">
-                    <h2>097 220 78 30<br/>099 125 05 24<br/>063 913 47 23<br></h2>
-                    <a href=""><img src="img/glyphicons-social-31-facebook.png" alt=""><span class="social social-pinterest"></span></a>
-                    <a href=""><img src="img/glyphicons-social-33-instagram.png" alt=""></span></a>
-                    <a href=""><img src="img/glyphicons-social-67-vk.png" alt=""></span></a>
-                    <h4>info@alivecamp.com.ua</h4>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
