--- a/index.html
+++ b/index.html
@@ -310,84 +310,155 @@
         </div>
     </div>
 
-    <div id="photo">
-        <div class="container">
-            <div id="main_area">
-                    <!-- Slider -->
-                    <div class="row">
-                        <div class="col-xs-12" id="slider">
-                            <!-- Top part of the slider -->
-                            <div class="row">
-                                <div class="col-sm-2">
-                                    <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                                        <span class="glyphicon glyphicon-chevron-left"></span>
-                                    </a> -->
-                                </div>
-                                <div class="col-sm-8 " id="carousel-bounding-box">
-                                    <div class="carousel slide" id="myCarousel">
-                                        <!-- Carousel items -->
-                                        <div class="carousel-inner">
-                                            <div class="active item" data-slide-number="0">
-                                            <img src="img/photo_1.1.jpg"></div>
+<!--     <section class="photo_section">
+        <div class="col-xs-12" id="slider">
+            <div class="row">
+                <div class="col-sm-2">
+                </div>
+                <div class="col-sm-8 " id="carousel-bounding-box">
+                    <div class="carousel slide" id="myCarousel">
+                        <div class="carousel-inner">
+                            <div class="active item" data-slide-number="0">
+                            <img src="img/photo_1.1.jpg"></div>
 
-                                            <div class="item" data-slide-number="1">
-                                            <img src="img/photo_2.jpg"></div>
+                            <div class="item" data-slide-number="1">
+                            <img src="img/photo_2.jpg"></div>
 
-                                            <div class="item" data-slide-number="2">
-                                            <img src="img/photo_3.jpg"></div>
+                            <div class="item" data-slide-number="2">
+                            <img src="img/photo_3.jpg"></div>
 
-                                            <div class="item" data-slide-number="3">
-                                            <img src="img/photo_4.jpg"></div>
+                            <div class="item" data-slide-number="3">
+                            <img src="img/photo_4.jpg"></div>
 
-                                            <div class="item" data-slide-number="4">
-                                            <img src="img/photo_5.jpg"></div>
+                            <div class="item" data-slide-number="4">
+                            <img src="img/photo_5.jpg"></div>
 
-                                            <div class="item" data-slide-number="5">
-                                            <img src="img/photo_6.jpg"></div>
-                                        </div><!-- Carousel nav -->
-                                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                                            <span class="glyphicon glyphicon-chevron-left"></span>
-                                        </a>
-                                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                                            <span class="glyphicon glyphicon-chevron-right"></span>
-                                        </a>
-                                        </div>
-                                </div>
-                            </div>
+                            <div class="item" data-slide-number="5">
+                            <img src="img/photo_6.jpg"></div>
                         </div>
-                    </div><!--/Slider-->
-
-                    <div class="row hidden-xs" id="slider-thumbs">
-                            <!-- Bottom switcher of slider -->
-                            <ul class="hide-bullets">
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-0"><img src="img/photo_1.1.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-1"><img src="img/photo_2.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-2"><img src="img/photo_3.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-3"><img src="img/photo_4.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-4"><img src="img/photo_5.jpg"></a>
-                                </li>
-
-                                <li class="col-sm-2">
-                                    <a class="thumbnail" id="carousel-selector-5"><img src="img/photo_6.jpg"></a>
-                                </li>
-                            </ul>
-                    </div>
+                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
+                        </div>
+                </div>
             </div>
+        </div>
     </div>
-    </div>
+
+    <div class="row hidden-xs" id="slider-thumbs">
+            <ul class="hide-bullets">
+                <li class="col-sm-2">
+                    <a class="thumbnail" id="carousel-selector-0"><img src="img/photo_1.1.jpg"></a>
+                </li>
+
+                <li class="col-sm-2">
+                    <a class="thumbnail" id="carousel-selector-1"><img src="img/photo_2.jpg"></a>
+                </li>
+
+                <li class="col-sm-2">
+                    <a class="thumbnail" id="carousel-selector-2"><img src="img/photo_3.jpg"></a>
+                </li>
+
+                <li class="col-sm-2">
+                    <a class="thumbnail" id="carousel-selector-3"><img src="img/photo_4.jpg"></a>
+                </li>
+
+                <li class="col-sm-2">
+                    <a class="thumbnail" id="carousel-selector-4"><img src="img/photo_5.jpg"></a>
+                </li>
+
+                <li class="col-sm-2">
+                    <a class="thumbnail" id="carousel-selector-5"><img src="img/photo_6.jpg"></a>
+                </li>
+            </ul>
+        </div>
+    </section> -->
+    <!-- bootstrap carousel -->
+    <section class="photo_section">
+        <div class="row centered">
+            <div class="col-md-10 col-md-offset-1">
+                <h1 class="photo__heading">ФОТО</h1>
+            </div>
+        </div>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">   
+
+        <div class="row centered row__slider">
+            <div class="col-md-6 col-md-offset-3 col__slider">
+                <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+
+                <div class="item active srle">
+                  <img src="img/TR_AliveCamp-87.jpg" alt="1.jpg" class="img-responsive">
+                </div>
+
+                <div class="item">
+                  <img src="img/TR_AliveCamp-141.jpg" alt="2.jpg" class="img-responsive">
+                </div>
+
+                <div class="item">
+                  <img src="img/TR_AliveCamp-170.jpg" alt="3.jpg" class="img-responsive">
+                </div>
+
+                <div class="item">
+                  <img src="img/TR_AliveCamp-198.jpg" alt="4.jpg" class="img-responsive">
+                </div>
+
+                <div class="item">
+                  <img src="img/6nndg_tfwVw.jpg" alt="5.jpg" class="img-responsive">
+                </div>
+                
+<!--                 <div class="item">
+                  <img src="img/photo_3.jpg" alt="6.jpg" class="img-responsive">
+                </div>
+
+                <div class="item">
+                  <img src="img/Q3LCZqRrWtY.jpg" alt="7.jpg" class="img-responsive">
+                </div> -->
+
+              </div>
+            </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <img src="img/arrow_right.png">
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <img src="img/arrow_right.png">
+                </a>
+        </div>
+
+            <div class="row row__thumbnail">
+                <div class="col-md-12 col__thumbnail">
+                    <!-- Thumbnails --> 
+                    <ul class="thumbnails-carousel clearfix">
+                        <li class="thumbnails">
+                            <img src="img/TR_AliveCamp-87.jpg" alt="1_tn.jpg">
+                        </li>
+                        <li class="thumbnails">
+                            <img src="img/TR_AliveCamp-141.jpg" alt="1_tn.jpg">
+                        </li>
+                        <li class="thumbnails">
+                            <img src="img/TR_AliveCamp-170.jpg" alt="1_tn.jpg">
+                        </li>
+                        <li class="thumbnails">
+                            <img src="img/TR_AliveCamp-198.jpg" alt="1_tn.jpg">
+                        </li>
+                        <li class="thumbnails">
+                            <img src="img/6nndg_tfwVw.jpg" alt="1_tn.jpg">
+                        </li>
+<!--                         <li class="thumbnails">
+                            <img src="img/photo_3.jpg" alt="1_tn.jpg">
+                        </li>
+                        <li class="thumbnails">
+                            <img src="img/Q3LCZqRrWtY.jpg" alt="1_tn.jpg">
+                        </li> -->
+                    </ul>
+                </div>
+            </div>
+    </section>
+
     <section class="contact__section">
         <div class="row contact__headind centered">
             <div class="col-md-10 col-md-offset-1">
@@ -439,8 +510,6 @@
             </p>
         </div>  
     </section>
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
