Edit some styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -22,28 +21,28 @@
                     <span class="icon-bar"></span>
                 </button>
             </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#golovna">ГОЛОВНА</a>
-                        <li><a href="#pro_tabir">ПРО ТАБІР</a>
-                        <li><a href="#rozporyadok">РОЗПОРЯДОК ДНЯ</a>
-                        <li><a href="#aktyvnosti">АКТИВНОСТІ</a>
-                        <li><a href="#tsiny">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
-                        <li><a href="#photo">ФОТО</a>
-                        <li><a href="#kontakty">КОНТАКТИ</a>
-                    </ul>
-                </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#golovna">ГОЛОВНА</a>
+                    <li><a href="#pro_tabir">ПРО ТАБІР</a>
+                    <li><a href="#rozporyadok">РОЗПОРЯДОК ДНЯ</a>
+                    <li><a href="#aktyvnosti">АКТИВНОСТІ</a>
+                    <li><a href="#tsiny">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
+                    <li><a href="#photo">ФОТО</a>
+                    <li><a href="#kontakty">КОНТАКТИ</a>
+                </ul>
             </div>
+        </div>
     </nav>
     <div id="golovna">
         <div class="container">
             <div class="row centered">
-                <div class="col-lg-8 col-lg-offset-2 text-block1_1">
-                    <img src="img/logo_yeer_sm.png" alt="Logo" class="" height="450"><br/>
+                <div class="col-lg-8 col-lg-offset-2 img-block1_1">
+                    <img src="img/logo_yeer_sm.png" alt="Logo" class="" height=""><br/>
                     <br/>
                 </div>
             </div>
-            <div class="row centered">
+            <div class="row buttons centered">
                 <div class="col-lg-3"></div>
                 <div class="col-lg-3">
                     <button type="button" class="btn btn-default btn-lg button-one" aria-label="Left Align">
@@ -59,7 +58,7 @@
     <div id="pro_tabir">
         <div class="container">
             <div class="row centered">
-                <div class="col-lg-3 text-block2_1" >
+                <div class="col-lg-3 col-lg-offset-1 text-block2_1" >
                     <div class="text-innerblock2_1">
                         <h1>ДЛЯ КОГО?</h1>
                         <h4>Для молоді, яка<br/>відчуває себе<br/>живою, активною<br/>та драйвовою!</h4>
@@ -349,46 +348,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                           <!--  <div class="col-sm-4" id="carousel-text"></div>
-
-                            <div id="slide-content" style="display: none;">
-                                <div id="slide-content-0">
-                                    <h2>Slider One</h2>
-                                    <p>Lorem Ipsum Dolor</p>
-                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                </div>
-
-                                <div id="slide-content-1">
-                                    <h2>Slider Two</h2>
-                                    <p>Lorem Ipsum Dolor</p>
-                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                </div>
-
-                                <div id="slide-content-2">
-                                    <h2>Slider Three</h2>
-                                    <p>Lorem Ipsum Dolor</p>
-                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                </div>
-
-                                <div id="slide-content-3">
-                                    <h2>Slider Four</h2>
-                                    <p>Lorem Ipsum Dolor</p>
-                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                </div>
-
-                                <div id="slide-content-4">
-                                    <h2>Slider Five</h2>
-                                    <p>Lorem Ipsum Dolor</p>
-                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                </div>
-
-                                <div id="slide-content-5">
-                                    <h2>Slider Six</h2>
-                                    <p>Lorem Ipsum Dolor</p>
-                                    <p class="sub-text">October 24 2012 - <a href="#">Read more</a></p>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div><!--/Slider-->
@@ -424,31 +383,7 @@
             </div>
         </div>
     </div>
-    <div id="kontakty">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-12">
-                    <h1>КОНТАКТИ</h1><br/>
-                    <h4>Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається<br/>просвітницькою, духовною та соціальною діяльністю з молоддю і дорослими у м.Львові та частково у інших<br/>містах України. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.</h4>
-                </div>
-            </div>
-            <div class="row centered text-row9_1">
-                <div class="col-lg-4 col-lg-offset-2 text-block9_1">
-                    <h3>Київстар: 097 220 78 30<br/>Vodafone: 099 125 05 24<br/>lifecell: 063 913 47 23<br></h3>
-                </div>
-                <div class="col-lg-4 text-block9_2">
-                    <a href=""><i class="fa fa-vk" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                </div>
-            </div>    
-            <div class="row centered text-row9_2">
-                <div class="col-lg-12">
-                    <h3>info@alivecamp.com.ua</h3>
-                </div>
-            </div>
-        </div>        
-    </div>
+
     </div>
     <section class="contact__section">
         <div class="row contact__headind centered">
@@ -501,6 +436,7 @@
             </p>
         </div>  
     </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
