--- a/index.html
+++ b/index.html
@@ -309,74 +309,45 @@
             </div>
         </div>
     </div>
+    <!-- REGISTRATION SECTION -->
 
-<!--     <section class="photo_section">
-        <div class="col-xs-12" id="slider">
-            <div class="row">
-                <div class="col-sm-2">
-                </div>
-                <div class="col-sm-8 " id="carousel-bounding-box">
-                    <div class="carousel slide" id="myCarousel">
-                        <div class="carousel-inner">
-                            <div class="active item" data-slide-number="0">
-                            <img src="img/photo_1.1.jpg"></div>
-
-                            <div class="item" data-slide-number="1">
-                            <img src="img/photo_2.jpg"></div>
-
-                            <div class="item" data-slide-number="2">
-                            <img src="img/photo_3.jpg"></div>
-
-                            <div class="item" data-slide-number="3">
-                            <img src="img/photo_4.jpg"></div>
-
-                            <div class="item" data-slide-number="4">
-                            <img src="img/photo_5.jpg"></div>
-
-                            <div class="item" data-slide-number="5">
-                            <img src="img/photo_6.jpg"></div>
-                        </div>
-                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                        </a>
-                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                        </a>
-                        </div>
-                </div>
+    <section class="reg__section">
+        <div class="row centered">
+            <div class="col-md-10 col-lg-offset-1 reg__column-heading">
+                <h1 class="reg__heading">
+                    РЕЄСТРАЦІЯ
+                </h1>
+                <h1 class="reg__heading bordered">
+                    РЕЄСТРАЦІЯ
+                </h1>
             </div>
         </div>
-    </div>
-
-    <div class="row hidden-xs" id="slider-thumbs">
-            <ul class="hide-bullets">
-                <li class="col-sm-2">
-                    <a class="thumbnail" id="carousel-selector-0"><img src="img/photo_1.1.jpg"></a>
-                </li>
-
-                <li class="col-sm-2">
-                    <a class="thumbnail" id="carousel-selector-1"><img src="img/photo_2.jpg"></a>
-                </li>
-
-                <li class="col-sm-2">
-                    <a class="thumbnail" id="carousel-selector-2"><img src="img/photo_3.jpg"></a>
-                </li>
-
-                <li class="col-sm-2">
-                    <a class="thumbnail" id="carousel-selector-3"><img src="img/photo_4.jpg"></a>
-                </li>
-
-                <li class="col-sm-2">
-                    <a class="thumbnail" id="carousel-selector-4"><img src="img/photo_5.jpg"></a>
-                </li>
-
-                <li class="col-sm-2">
-                    <a class="thumbnail" id="carousel-selector-5"><img src="img/photo_6.jpg"></a>
-                </li>
-            </ul>
+        <img src="img/fance.jpg" class="img-responsive">
+        <div class="row centered">
+            <div class="col-md-10 col-lg-offset-1">
+                <p class="reg__discount">
+                    АКЦІЯ! ПРИ ПОЇЗДЦІ НА ДВА ЗАЇЗДИ ALIVECAMP, НА ДРУГИЙ ЗАЇЗД НАДАЄТЬСЯ ЗНИЖКА 20%!
+                </p>
+            </div>
         </div>
-    </section> -->
-    <!-- bootstrap carousel -->
+        <!-- steps -->
+        <div class="row centered">
+            <div class="col-md-3">
+                <div class="reg__tex-wrapper">
+                    <span class="step__number">1</span>
+                    <span class="step__description">ЗАПОВНІТЬ </br> АНКЕТУ</span>
+                </div>
+                <button class="reg__button" type="submit">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScWzRzezqk0o33Z580fc2ju9PCesw4v0st4SyX66m7V58PglQ/viewform?c=0&w=1&usp=send_form">ЗАПОВНИТИ</a>
+                </button>
+            </div>
+            <div class="col-md-1">
+                <img src="img/arrow_step.png" class="img-responsive">
+            </div>
+        </div>
+    </section>
+
+    <!-- PHOTO SECTION -->
     <section class="photo_section">
         <div class="row centered">
             <div class="col-md-10 col-md-offset-1">
@@ -408,15 +379,13 @@
 
                 <div class="item">
                   <img src="img/6nndg_tfwVw.jpg" alt="5.jpg" class="img-responsive">
-                </div>
-                
-<!--                 <div class="item">
-                  <img src="img/photo_3.jpg" alt="6.jpg" class="img-responsive">
-                </div>
-
+                </div>   
                 <div class="item">
-                  <img src="img/Q3LCZqRrWtY.jpg" alt="7.jpg" class="img-responsive">
-                </div> -->
+                  <img src="img/arZCdVWsMXI.jpg" alt="6.jpg" class="img-responsive">
+                </div>
+                <div class="item">
+                  <img src="img/E1ULSAAzZjQ.jpg" alt="7.jpg" class="img-responsive">
+                </div>
 
               </div>
             </div>
@@ -448,17 +417,17 @@
                         <li class="thumbnails">
                             <img src="img/6nndg_tfwVw.jpg" alt="1_tn.jpg">
                         </li>
-<!--                         <li class="thumbnails">
-                            <img src="img/photo_3.jpg" alt="1_tn.jpg">
+                        <li class="thumbnails">
+                            <img src="img/arZCdVWsMXI.jpg" alt="1_tn.jpg">
                         </li>
                         <li class="thumbnails">
-                            <img src="img/Q3LCZqRrWtY.jpg" alt="1_tn.jpg">
-                        </li> -->
+                            <img src="img/E1ULSAAzZjQ.jpg" alt="1_tn.jpg">
+                        </li>
                     </ul>
                 </div>
             </div>
     </section>
-
+    <!-- CONTACT SECTION -->
     <section class="contact__section">
         <div class="row contact__headind centered">
             <div class="col-md-10 col-md-offset-1">
