--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
                 </div>
             </div>
             <div class="row buttons centered">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-3">
-                    <button type="button" class="btn btn-default btn-lg button-one" aria-label="Left Align">
+                <div class="col-lg-3 col-lg-offset-3">
+                    <button type="button" class="btn btn-default btn-lg button-one centered" aria-label="Left Align">
                         <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>
-                        ПРОМО
+                        <span class="promo">ПРОМО</span>
                     </button>
                 </div>
                 <div class="col-lg-3"><button type="button" class="btn btn-default btn-lg button-two">ЗАРЕЄСТРУВАТИСЯ</button></div>
-                <div class="col-lg-3"></div>
             </div>
         </div>
     </div>
@@ -159,16 +157,16 @@
         </div>
         <div class="container centered">
             <div class="row centered col-lg-offset-1 block3_1">
-                <div class="col-lg-3">
+                <div class="col-sm-3 col-md-3">
                     <p>1. Душі<br/>2. Туалети<br/>3. Умивальники<br/>4. Столи</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-2 col-md-3">
                     <p>5. Лавочки<br/>6. Постійна точка<br/>для зарядки<br/>ваших пристроїв</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-2 col-md-3">
                     <p>7. Накриття від дощу<br/>8. Фото-зона<br/>9. Relax-зона<br/>відпочинку</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-2 col-md-3">
                     <p>10. Міні-кафе<br/>11. Тенісний стіл<br/>12. Гойдалки</p>
                 </div>
             </div>
