--- a/index.html
+++ b/index.html
@@ -313,13 +313,14 @@
 
     <section class="reg__section">
         <!-- background text -->
-<!--         <div class="row">
-            <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-12 reg__background-wrapper">
+                <div class="dotted__circle"></div>
                 <span class="reg__background one">ALIVE CAMP</span>
                 <span class="reg__background two">РЕЄСТРАЦІЯ</span>
                 <span class="reg__background three">ВАРТІСТЬ</span>
             </div>
-        </div> -->
+        </div>
         <div class="row centered">
             <div class="col-md-10 col-lg-offset-1 reg__column-heading">
                 <h1 class="reg__heading">
