--- a/index.html
+++ b/index.html
@@ -176,125 +176,129 @@
             </div>
         </div>
     </div>
-
     <div id="rozporyadok">
-            <div class="col-lg-12">
-                <div class="brd">
-                    <h2 class="metro">Орієнтовний розпорядок дня</h2>
-                    <div class="col-lg-5 col-lg-offset-1">
+			<div class="col-sm-12">
+				<div class="brd">
+					<h2 class="metro">Орієнтовний розпорядок дня</h2>
+					<div class="col-sm-5 col-sm-offset-1">
             <p><font color="gold">7.45</font> - Підйом</p>
-                        <p><font color="gold">08.00</font> - Зарядка</p>
-                        <p><font color="gold">08.15</font> - Сніданок</p>
-                        <p><font color="gold">09.30</font> - Активності для тіла</p>
-                        <p><font color="gold">11.00</font> - Активності для духу</p>
-                        <p><font color="gold">12.00</font> - Активності для розуму</p>
-                        <p><font color="gold">13.30</font> - Обід та вільний час</p>
-                    </div>
-          <div class="col-lg-6>">
-                        <p><font color="gold">15.00</font> - Активності для саморозвитку</p>
-                        <p><font color="gold">16.00</font> - Командні ігри, турніри, квести</p>
-                        <p><font color="gold">18.30</font> - Активності для душі</p>
-                        <p><font color="gold">19.30</font> - Вечеря</p>
-                        <p><font color="gold">20.45</font> - Вечірня програма</p>
-                        <p><font color="gold">22.30</font> - Відпочинкова зона</p>
-                        <p><font color="gold">00.00</font> - Відбій</p>
-                    </div>
+						<p><font color="gold">08.00</font> - Зарядка</p>
+						<p><font color="gold">08.15</font> - Сніданок</p>
+						<p><font color="gold">09.30</font> - Активності для тіла</p>
+						<p><font color="gold">11.00</font> - Активності для духу</p>
+						<p><font color="gold">12.00</font> - Активності для розуму</p>
+						<p><font color="gold">13.30</font> - Обід та вільний час</p>
+					</div>
+          <div class="col-sm-6">
+						<p><font color="gold">15.00</font> - Активності для саморозвитку</p>
+						<p><font color="gold">16.00</font> - Командні ігри, турніри, квести</p>
+						<p><font color="gold">18.30</font> - Активності для душі</p>
+						<p><font color="gold">19.30</font> - Вечеря</p>
+						<p><font color="gold">20.45</font> - Вечірня програма</p>
+						<p><font color="gold">22.30</font> - Відпочинкова зона</p>
+						<p><font color="gold">00.00</font> - Відбій</p>
+					</div>
         </div>
-            </div>
+			</div>
     </div>
-        <div id="aktyvnosti">
+		<div id="aktyvnosti">
+      <div class='dotted'>
           <div class="row centered aktyv">
-                        <h1 class="aktyv">АКТИВНОСТІ</h1>
-                            <h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
-                            <div class="col-lg-12">
-                                <div class="circle col-lg-2 col-lg-offset-1">
-                                    <img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
-                                    <span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
-                                </div>
-                                <div class="circle col-lg-2 ">
-                                    <img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
-                                    <span class="text_center pos_foot">ФУТБОЛ</span>
-                                </div>
-                                <div class="circle col-lg-2">
-                                    <img src="img\ico_round_ten.png" alt="НАСТІЛЬНИЙ ТЕНІС" class="image-tam">
-                                    <span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
-                                </div>
-                                <div class="circle col-lg-2 ">
-                                    <img src="img\ico_round_badm.png" alt="БАДМІНТОН" class="image-tam">
-                                    <span class="text_center pos_badm">БАДМІНТОН</span>
-                                </div>
-                                <div class="circle col-lg-2 ">
-                                    <img src="img\ico_round_polo.png" alt="ВОДНЕ ПОЛО" class="image-tam">
-                                    <span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="row centered">
-                        <h2 class="aktyv-underline ringo">ДЛЯ ДУХУ</h2>
-                        <div class="col-lg-12 rin">
-                            <div class="circle col-lg-2 col-lg-offset-2">
-                                <img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
-                                <span class="text_center pos_vol">РІЗНІ ВИДИ МОЛИТОВ</span>
-                            </div>
-                            <div class="circle col-lg-2 ">
-                                <img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
-                                <span class="text_center pos_foot">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
-                            </div>
-                            <div class="circle col-lg-2">
-                                <img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
-                                <span class="text_center pos_ten">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
-                            </div>
-                            <div class="circle col-lg-2 ">
-                                <img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
-                                <span class="text_center pos_badm">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
-                            </div>
-                      </div>
-                    </div>
-                    <div class="delta">
-                        <div class="row centered">
-                          <h2 class="aktyv-underline ringo">ДЛЯ РОЗУМУ</h2>
-                                <div class="col-lg-12 rin">
-                                    <div class="circle col-lg-2 col-lg-offset-2">
-                                        <img src="img\ico_round_ma.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
-                                        <span class="text_center pos_vol">МАФІЯ</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\dix.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
-                                        <span class="text_center pos_foot">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
-                                    </div>
-                                    <div class="circle col-lg-2">
-                                        <img src="img\ico_round_pa.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
-                                        <span class="text_center pos_ten">ПАРАСТАС</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\ico_round_zo.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
-                                        <span class="text_center pos_badm">ЗООПАРК</span>
-                                    </div>
-                               </div>
-                            </div>
-                        <div class="row centered">
-                          <h2 class="aktyv-underline ringo">ДЛЯ САМОРОЗВИТКУ</h2>
-                            <div class="col-lg-12 rin">
-                                    <div class="circle col-lg-2 col-lg-offset-2">
-                                        <img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
-                                        <span class="text_center pos_vol">УРОКИ ГРИ НА ГІТАРІ</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
-                                        <span class="text_center pos_foot">КУРС ПО СТОСУНКАХ</span>
-                                    </div>
-                                    <div class="circle col-lg-2">
-                                        <img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
-                                        <span class="text_center pos_ten">ENGLISH CLUB</span>
-                                    </div>
-                                    <div class="circle col-lg-2 ">
-                                        <img src="img\ico_round_po.png" alt="ПОЕТИЧНІ ВИСТУПИ" class="image-tam">
-                                        <span class="text_center pos_badm">ПОЕТИЧНІ ВИСТУПИ</span>
-                                    </div>
-                              </div>
-                        </div>
-                    </div>
-            </div>
+  						<h1 class="aktyv">АКТИВНОСТІ</h1>
+  							<h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
+  							<div class="col-sm-12">
+  								<div class="circle col-sm-2 col-sm-offset-1">
+  									<img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
+  									<span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
+  								</div>
+  								<div class="circle col-sm-2 ">
+  									<img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
+  									<span class="text_center pos_foot">ФУТБОЛ</span>
+  								</div>
+  								<div class="circle col-sm-2">
+  									<img src="img\ico_round_ten.png" alt="НАСТІЛЬНИЙ ТЕНІС" class="image-tam">
+  									<span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
+  								</div>
+  								<div class="circle col-sm-2 ">
+  									<img src="img\ico_round_badm.png" alt="БАДМІНТОН" class="image-tam">
+  									<span class="text_center pos_badm">БАДМІНТОН</span>
+  								</div>
+  								<div class="circle col-sm-2 ">
+  									<img src="img\ico_round_polo.png" alt="ВОДНЕ ПОЛО" class="image-tam">
+  									<span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
+  								</div>
+  					 	</div>
+					</div>
+					<div class="row centered">
+						<h2 class="aktyv-underline ringo">ДЛЯ ДУХУ</h2>
+						<div class="col-sm-12 rin">
+							<div class="circle col-sm-2 col-sm-offset-2">
+								<img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
+								<span class="text_center pos pr">РІЗНІ ВИДИ МОЛИТОВ</span>
+							</div>
+							<div class="circle col-sm-2 ">
+								<img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
+								<span class="text_center pos hb">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
+							</div>
+							<div class="circle col-sm-2">
+								<img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
+								<span class="text_center pos ch">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
+							</div>
+							<div class="circle col-sm-2 ">
+								<img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
+								<span class="text_center pos qu">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
+							</div>
+					  </div>
+					</div>
+        </div>
+      </div>
+					<div class="delta">
+						<div class="row centered">
+              <div class="dottedin">
+			  			  <h2 class="aktyv-underline ringo doton">ДЛЯ РОЗУМУ</h2>
+              </div>
+								<div class="col-sm-12 rin">
+									<div class="circle col-sm-2 col-sm-offset-2">
+										<img src="img\ico_round_ma.png" alt="МАФІЯ" class="image-tam">
+										<span class="text_center post ma">МАФІЯ</span>
+									</div>
+									<div class="circle col-sm-2 ">
+										<img src="img\dix.png" alt="DIXIT, TWINS, UNO, JENGA та ІНШІ" class="image-tam">
+										<span class="text_center post dix">DIXIT, TWINS, UNO, JENGA та ІНШІ</span>
+									</div>
+									<div class="circle col-sm-2">
+										<img src="img\ico_round_pa.png" alt="ПАРАСТАС" class="image-tam">
+										<span class="text_center post pa">ПАРАСТАС</span>
+									</div>
+									<div class="circle col-sm-2 ">
+										<img src="img\ico_round_zo.png" alt="ЗООПАРК" class="image-tam">
+										<span class="text_center post zo">ЗООПАРК</span>
+									</div>
+							   </div>
+							</div>
+						<div class="row centered">
+				  		  <h2 class="aktyv-underline ringo">ДЛЯ САМОРОЗВИТКУ</h2>
+						  	<div class="col-sm-12 rin">
+								 	<div class="circle col-sm-2 col-sm-offset-2">
+										<img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
+										<span class="text_center pos vol">УРОКИ ГРИ НА ГІТАРІ</span>
+									</div>
+									<div class="circle col-sm-2 ">
+										<img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
+										<span class="text_center pos re">КУРС ПО СТОСУНКАХ</span>
+									</div>
+									<div class="circle col-sm-2">
+										<img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
+										<span class="text_center pos enсlab">ENGLISH CLUB</span>
+									</div>
+									<div class="circle col-sm-2 ">
+										<img src="img\ico_round_po.png" alt="ПОЕТИЧНІ ВИСТУПИ" class="image-tam">
+										<span class="text_center pos po">ПОЕТИЧНІ ВИСТУПИ</span>
+									</div>
+							  </div>
+						</div>
+					</div>
+		</div>
     <div id="tsiny">
         <div class="container">
             <div class="row centered">
@@ -394,7 +398,7 @@
                 <h2 class="contact__headind">
                   КОНТАКТИ
                 </h2>
-            </div>        
+            </div>
         </div>
         <div class="row contact_description">
             <div class="col-md-10 col-md-offset-1 text-center">
@@ -402,13 +406,13 @@
                   Організатором AliveCamp є спільнота "Благословення" Української Греко-Католицької Церкви, яка займається просвітницькою, духовною та соціальною працею з молоддю і дорослими у м.Львові та за його межами. Виручені кошти з AliveCamp будуть спрямовані на підтримку та реалізацію цієї діяльності.
                 </p>
             </div>
-        </div> 
+        </div>
         <div class="row contact__info-block">
             <div class="col-md-2 col-sm-1"></div>
             <div class="col-md-4 col-sm-5 col-xs-12">
                 <ul class="contact__list-phones">
-                  <li class="kyivstar text-right"> 
-                    Київстар: 097 220 78 30 
+                  <li class="kyivstar text-right">
+                    Київстар: 097 220 78 30
                   </li>
                   <li class="vodafone text-right">
                     Vodafone: 099 125 05 24
@@ -437,7 +441,7 @@
             <p class="contact__email">
               info@alivecamp.com.ua
             </p>
-        </div>  
+        </div>
     </section>
 
 
@@ -447,5 +451,3 @@
     <script src="js/slider.js"></script>
 </body>
 </html>
-
-
