--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <li><a href="#pro_tabir">ПРО ТАБІР</a>
                         <li><a href="#rozporyadok">РОЗПОРЯДОК ДНЯ</a>
                         <li><a href="#aktyvnosti">АКТИВНОСТІ</a>
-                        <li><a href="#tsiny">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
-                        <li><a href="#photo">ФОТО</a>
-                        <li><a href="#kontakty">КОНТАКТИ</a>
+                        <li><a href="#reg__section" rel="nofollow">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
+                        <li><a href="#photo__section" rel="nofollow">ФОТО</a>
+                        <li><a href="#contact__section" rel="nofollow">КОНТАКТИ</a>
                     </ul>
                 </div>
             </div>
@@ -295,22 +295,8 @@
                         </div>
                     </div>
             </div>
-    <div id="tsiny">
-        <div class="container">
-            <div class="row centered">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>ЦІНИ ТА РЕЄСТРАЦІЯ</h1>
-                    <h1>ALIVE CAMP</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6"></div>
-                <div class="col-lg-6"></div>
-            </div>
-        </div>
-    </div>
     <!-- REGISTRATION SECTION -->
-
+    <a name="reg__section" class="anchor"></a>
     <section class="reg__section">
         <!-- background text -->
         <div class="row">
@@ -420,6 +406,7 @@
     </section>
 
     <!-- PHOTO SECTION -->
+    <a name="photo__section" class="anchor"></a>
     <section class="photo_section">
         <div class="row centered">
             <div class="col-md-10 col-md-offset-1">
@@ -432,23 +419,18 @@
             <div class="col-md-6 col-md-offset-3 col__slider">
                 <!-- Wrapper for slides -->
               <div class="carousel-inner">
-
                 <div class="item active srle">
                   <img src="img/TR_AliveCamp-87.jpg" alt="1.jpg" class="img-responsive">
                 </div>
-
                 <div class="item">
                   <img src="img/TR_AliveCamp-141.jpg" alt="2.jpg" class="img-responsive">
                 </div>
-
                 <div class="item">
                   <img src="img/TR_AliveCamp-170.jpg" alt="3.jpg" class="img-responsive">
                 </div>
-
                 <div class="item">
                   <img src="img/TR_AliveCamp-198.jpg" alt="4.jpg" class="img-responsive">
                 </div>
-
                 <div class="item">
                   <img src="img/6nndg_tfwVw.jpg" alt="5.jpg" class="img-responsive">
                 </div>   
@@ -473,7 +455,7 @@
             <div class="row row__thumbnail">
                 <div class="col-md-12 col__thumbnail">
                     <!-- Thumbnails --> 
-                    <ul class="thumbnails-carousel clearfix">
+                    <ul class="thumbnails-carousel">
                         <li class="thumbnails">
                             <img src="img/TR_AliveCamp-87.jpg" alt="1_tn.jpg">
                         </li>
@@ -500,7 +482,7 @@
             </div>
     </section>
     <!-- CONTACT SECTION -->
-    <section class="contact__section">
+    <section class="contact__section" id="contact__section">
         <div class="row contact__headind centered">
             <div class="col-md-10 col-md-offset-1">
                 <h2 class="contact__headind">
