finish email form

--- a/list.html
+++ b/list.html
@@ -12,6 +12,7 @@
 <body>
 	<div class="row centered">
 		<div class="col-md-8 col-md-offset-2 thing__list-block">
+			<img src="img/logo.png" class="list__logo">
 			<h1>ПЕРЕЛІК НЕОБХІДНИХ РЕЧЕЙ</h1>
 			<ul class="reg__list">
 				<li class="list__items">01. Палатка</li>
