add payment link

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     </p>
                 </div>
                 <button class="reg__button two" type="submit">
-                    <a href="#">ОПЛАТИТИ ОНЛАЙН</a>
+                    <a href="https://www.liqpay.com/ru/checkout/card/alivecamp">ОПЛАТИТИ ОНЛАЙН</a>
                 </button>
                 <br>
                 <button class="reg__button two" type="submit">
