add new background

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
             </div>
             <div class="row buttons centered">
                 <div class="col-lg-3 col-lg-offset-3">
-                    <button type="button" class="btn btn-default btn-lg button-one centered" aria-label="Left Align">
-                        <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>
-                        <span class="promo">ПРОМО</span>
-                    </button>
+                    <a href="https://www.youtube.com/watch?v=w14t6go9mx8&t=1s">
+                        <button type="button" class="btn btn-default btn-lg button-one centered" aria-label="Left Align">
+                            <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>
+                            <span class="promo">ПРОМО</span>
+                        </button>
+                    </a>
                 </div>
                 <div class="col-lg-3"><button type="button" class="btn btn-default btn-lg button-two">ЗАРЕЄСТРУВАТИСЯ</button></div>
             </div>
@@ -64,8 +66,7 @@
                 </div>
                 <div class="col-lg-4 text-block2_2">
                     <img src="img/logo_yeer.png" alt="Logo" class="" height="130">
-                    <h3>Місце проведення<br/><strong>ШАЦЬКІ ОЗЕРА</strong></h3>
-                    <h3></h3>   
+                    <h3><small>Місце проведення</small><br/><strong>ШАЦЬКІ ОЗЕРА</strong></h3>  
                 </div>
                 <div class="col-lg-3 text-block2_3">
                     <div class="">
@@ -81,7 +82,7 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>ЗАЇЗДИ<br/>ALIVE CAMP</th>
+                                <th><small>ЗАЇЗДИ</small><br/>ALIVE CAMP</th>
                                 <th>ДАТА</th>
                                 <th>ВІК</th>
                             </tr>
