--- a/index.html
+++ b/index.html
@@ -442,7 +442,22 @@
                             <span class="email__modal-text">
                                 Вибір заїзду:
                             </span></br>
-                            <input type="number" name="quantity" min="1" max="5" value="1"></br>
+                            <span class="email__modal-text"> 1
+                                <input type="checkbox" name="race1" value="1">
+                            </span>
+                            <span class="email__modal-text"> 2
+                                <input type="checkbox" name="race2" value="2">
+                            </span>
+                            <span class="email__modal-text"> 3
+                                <input type="checkbox" name="race3" value="3">
+                            </span>
+                            <span class="email__modal-text"> 4
+                                <input type="checkbox" name="race4" value="4">
+                            </span>
+                            <span class="email__modal-text"> 5
+                                <input type="checkbox" name="race5" value="5">
+                            </span>
+                            </br>
                             </br>
                             <input type="submit" value="Надіслати" class="email__submit">
                         </form>
